--- a/_notebooks/2024-06-4-NATM.ipynb
+++ b/_notebooks/2024-06-4-NATM.ipynb
@@ -318,45 +318,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Intext data for encryption\n",
+    "**Intext data for encryption**<br><br><br>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.55.58%E2%80%AFPM.png\"></center>"
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.55.58%E2%80%AFPM.png\"></center><br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Sending data for encryption\n",
+    "**Sending data for encryption**<br><br><br>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.57.47%E2%80%AFPM.png\"></center>"
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.57.47%E2%80%AFPM.png\"></center><br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Visible data on the backend database\n",
+    "**Visible data on the backend database**<br><br><br>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.18%E2%80%AFPM.png\"><center>"
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.18%E2%80%AFPM.png\"></center><br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Getting the encrypted data and the encrypted id\n",
+    "**Getting the encrypted data and the encrypted id**<br><br><br>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.25%E2%80%AFPM.png\"></center>"
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.25%E2%80%AFPM.png\"></center><br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Using encrypted id to get raw data back in decypter\n",
+    "**Using encrypted id to get raw data back in decypter**<br><br><br>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.42%E2%80%AFPM.png\"></center>"
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.42%E2%80%AFPM.png\"></center><br><br>"
    ]
   }
  ],
