--- a/_notebooks/2024-04-25-Interview_Portfolio.ipynb
+++ b/_notebooks/2024-04-25-Interview_Portfolio.ipynb
@@ -81,6 +81,17 @@
     "\n",
     "<a href=\"https://drive.google.com/file/d/1TA75yhLB6J-9Q6LIF9hoyKzdhK9PYRLL/view?usp=sharing\">Link to my resume</a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>5. Link to my Linkedin</h3>\n",
+    "\n",
+    "This is my linkedin link wherein most of what my resume deatils is mentioned in a more organized and detailed manner.\n",
+    "\n",
+    "<a href=\"https://www.linkedin.com/in/sri-vaidyanathan-suryanarayanan-262097312/\">Link to my resume</a>"
+   ]
   }
  ],
  "metadata": {
