--- a/_notebooks/2024-04-25-Interview_Portfolio.ipynb
+++ b/_notebooks/2024-04-25-Interview_Portfolio.ipynb
@@ -92,6 +92,16 @@
     "\n",
     "<a href=\"https://www.linkedin.com/in/sri-vaidyanathan-suryanarayanan-262097312/\">Link to my resume</a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>6. Link to my Night At the Museum Blog</h3>\n",
+    "\n",
+    "This blog is an example blog of the night at the museum blog that I made in order to document the workings of the code algorithm that encrypts and de\n",
+    "<a href=\"https://srivaidyas.github.io/student2.0//2024/06/04/NATM_IPYNB_2_.html\">Link to my resume</a>"
+   ]
   }
  ],
  "metadata": {
